envoyfilter-teaching/envoyfilter/dubbo/dr-dubbo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-hello-provider
spec:
  host: dubbo-hello-provider
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
