envoyfilter-teaching/envoyfilter/dubbo/ef-dubbo-metadata_match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoyfilter-dubbo-proxy
spec:
  workloadSelector:
    labels:
      app: dubbo-hello-consumer
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        name: 10.68.242.66_20880
        filterChain:
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
        name: envoy.filters.network.dubbo_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
          stat_prefix: outbound|20880||org.example.api.ITestService
          protocol_type: Dubbo
          serialization_type: Hessian2
          route_config:
          - name: outbound|20880||org.example.api.ITestService
            interface: org.example.api.ITestService
            routes:
            - match:
                method:
                  name:
                    contains: PROiderService
                    ignore_case: true
              route:
                cluster: cluster123
                metadata_match:
                  filter_metadata:
                    envoy.lb:
                      env: mark
  - applyTo: CLUSTER
    patch:
      operation: ADD
      value: 
        name: "cluster123"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        lb_subset_config:
          fallback_policy: NO_FALLBACK
          default_subset:
            env: "mark"
          subset_selectors:
          - keys:
            - env
        load_assignment:
          cluster_name: cluster123
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: dubbo-hello-provider.istio.svc.cluster.local
                    port_value: 20880
              metadata:
                filter_metadata:
                  envoy.lb:
                    env: mark
