envoyfilter-teaching/envoyfilter/dubbo/ef-dubbo-version.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoyfilter-dubbo-proxy
spec:
  workloadSelector:
    labels:
      app: dubbo-hello-consumer
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        name: 10.68.242.66_20880
        filterChain:
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
        name: envoy.filters.network.dubbo_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
          stat_prefix: outbound|20880||org.example.api.IGroupService
          protocol_type: Dubbo
          serialization_type: Hessian2
          route_config:
          - name: outbound|20880||org.example.api.IGroupService
            interface: org.example.api.IGroupService
            version: "1.0.0"
            routes:
            - match:
                method:
                  name:
                    exact: dubboCallProiderService
              route:
                cluster: outbound|20880|v1|dubbo-hello-provider.istio.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoyfilter-dubbo-proxy-inbound
spec:
  workloadSelector:
    labels:
      app: dubbo-hello-provider
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        name: virtualInbound
        filterChain:
          destinationPort: 20880
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
        name: envoy.filters.network.dubbo_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
          stat_prefix: inbound|20880||
          protocol_type: Dubbo
          serialization_type: Hessian2
          route_config:
          - name: inbound|20880||
            interface: org.example.api.IGroupService
            version: "1.0.0"
            routes:
            - match:
                method:
                  name:
                    exact: dubboCallProiderService
              route:
                cluster: inbound|20880||
