envoyfilter-teaching/envoyfilter/dubbo/vs-dubbo.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dubbo
spec:
  hosts:
  - "*"
  gateways:
  - dubbo-gateway
  http:
  - match:
    - uri:
        prefix: /test
    route:
    - destination:
        host: dubbo-hello-consumer.istio.svc.cluster.local
        port:
          number: 8081
